Fix button styling on iOS.

--- a/guacamole/src/main/webapp/styles/login.css
+++ b/guacamole/src/main/webapp/styles/login.css
@@ -21,6 +21,10 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
+input[type=submit], button {
+    -webkit-appearance: none;
+}
+
 body {
     background: #EEE;
     font-family: FreeSans, Helvetica, Arial, sans-serif;
